# justice-companion

./: .gitignore  AI_INTEGRATION_FIX_REPORT.md  AMD_GPU_SETUP_COMPLETE.md  AMD_GPU_SETUP_GUIDE.md  API_DELIVERABLES_SUMMARY.md  API_ENHANCEMENT_REPORT.md  BROWSER_TEST_INSTRUCTIONS.md  CHAT_INTERFACE_TEST_REPORT.md  CODE_OF_CONDUCT.md  CODE_QUALITY_IMPROVEMENTS.md  CODE_REVIEW_REPORT.md  COMPREHENSIVE_CODE_REVIEW_2025.md  COMPREHENSIVE_VERIFICATION_REPORT.md  CONTRIBUTING.md  CURSOR_EXTENSIONS_GUIDE.md  CURSOR_SHORTCUTS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  ENHANCED_LEGAL_AI_SUMMARY.md  GITHUB_BENEFITS_ACTIVATED.md  GITHUB_ISSUES.md  GITHUB_SETUP.md  INSTALL_AMD_OLLAMA_NOW.md  JUSTICE_COMPANION_BACKEND_OPTIMIZATION_REPORT.md  JUSTICE_COMPANION_FINAL_TEST_REPORT.md  JUSTICE_COMPANION_MANTRA.md  JUSTICE_COMPANION_SECURITY_OPTIMIZATION_REPORT.md  JusticeCompanion.ps1  LEGAL_COMPLIANCE_IMPLEMENTATION.md  LICENSE  LM_STUDIO_IMMEDIATE_STEPS.md  LM_STUDIO_QUICK_SETUP.md  LM_STUDIO_SETUP.md  MCP_DEVELOPMENT_SYSTEM_PROMPT.md  MCP_FINAL_VERIFICATION_2025.md  MCP_ISSUES_RESOLVED_2025.md  MCP_PYTHON_OPTIMIZED_SETUP.md  MCP_QUALITY_ASSURANCE_REPORT_2025.md  MCP_VERIFICATION_REPORT_2025.md  PARALLEL_DEPLOYMENT_PLAN.md  (+13 more)
.claude/: DEPLOYMENT_COMPLETE.md  agent-coordinator.md  deployment-status.md  parallel-agent-test.js  settings.local.json  task-assignments.json
.claude/agents/: legal-api-developer.md  legal-architecture-coordinator.md  legal-backend-developer.md  legal-code-reviewer.md  legal-debugger.md  legal-frontend-developer.md
.claude/commands/: deploy-parallel-agents.md
.claude/hooks/: pre-commit-quality.sh
.claude/hooks/lib/: config-constants.sh  (+3 more)
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: ci-cd.yml  ci.yml  claude.yml  codeql.yml  install-guide-testing.yml  npm-package-validation.yml  npm-publish-simple.yml  test.yml
api-docs/: API.md  CHANGELOG.md  api-docs.html  openapi.json
claude-code-main/: .gitignore  CLAUDE.md  LICENSE  README.md  dependencies.txt
claude-code-main/claude-dev-toolkit/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
claude-code-main/docs/: claude-code-hooks-system.md  claude-custom-commands.md  manual-uninstall-install-guide.md  npm-distribution-plan.md  npm-package-guide.md  subagent-hook-integration.md
claude-code-main/hooks/: file-logger.sh  pre-write-security.sh  subagent-trigger-simple.sh  subagent-trigger.sh
claude-code-main/scripts/: deploy-subagents.sh  setup-github-actions-iam.py  setup-npm-ssm.sh  xact.sh
claude-code-main/specs/: claude-commands-config-requirements.md  claude-commands-hooks-requirements.md  claude-commands-subagents-requirements.md  claude-dev-toolkit-oidc-requirements.md  command-specifications.md  custom-command-specifications.md  ears-format.md  help-functionality-specification.md  npm-distribution-requirements.md  npm-ssm-requirements.md  subagent-format-requirements.md  subagent-hook-integration-requirements.md
claude-code-main/subagents/: api-guardian.md  audit-trail-verifier.md  contract-tester.md  data-steward.md  debug-specialist.md  documentation-curator.md  environment-guardian.md  license-compliance-guardian.md  performance-guardian.md  security-auditor.md  style-enforcer.md  test-writer.md  workflow-coordinator.md
claude-code-main/templates/: basic-settings-OLD.json  basic-settings.json  comprehensive-settings-OLD.json  comprehensive-settings.json  security-focused-settings.json
claude-code-main/tests/: customization-guide-parser.js  customization-guide-tester.js  generate-comprehensive-report.js  install-guide-parser.js  install-guide-tester.js  integration-test-settings.js  package.json  run-all-tests.sh  security-validator.js  test-suite.json  test_subagent_hook_integration.sh  validate-documentation-accuracy.js  validate-settings-templates.js
electron/ipc-handlers/: ai-config.ts  cases.ts  chat.ts  dashboard.ts  database.ts  deadlines.ts  evidence.ts  export.ts  gdpr.ts  notifications.ts  port-status.ts  search.ts  tags.ts  templates.ts
justice-companion-app/: .env.template  .eslintrc.cjs  .eslintrc.json  .gitignore  .prettierrc  browser_debug_test.html  capture-now.js  capture-screen.ps1  check_console.js  check_console_errors.js  debug-react.js  file-watcher.js  index.html  interact-live.js  jest.config.js  jsconfig.json  live-monitor.js  package-lock.json  package.json  playwright.config.js  quick_web_test.js  run-tests.js  simple_test.js  test-simulation.bat  test_browser_console.js  test_react_fix.js  test_web_app.js  tsconfig.json  verify-ui.js  vite.config.js  web-deployment-guide.md
justice-companion-app/.claude/: settings.local.json
justice-companion-app/public/: sw.js
justice-companion-app/src/: gpu_cache_config.js  main.js  main.js.backup  preload.js  setupTests.js
mcp-file-system/: IMPLEMENTATION_SUCCESS.md  PAGINATION_SOLUTION.md  demo_searches.py  enhanced_main.py  filesystem_utils.py  main.py  pyproject.toml  search_helpers.py  test_enhanced.py
mcp-git-tools/: main.py  pyproject.toml
mcp-terminal/: main.py  pyproject.toml
mcp-web-tools/: main.py  pyproject.toml
ultimate-mcp-server/: README.md  main.py  pyproject.toml
ultimate-mcp-server/src/: __init__.py  desktop.py
ultrathink_test_dir/: search_test.txt
(+312 files in other folders)
