[project]
name = "mcp-web-tools"
version = "1.0.0"
description = "Focused MCP server for web scraping and HTTP operations"
authors = [
    { name = "Justice Companion", email = "dev@justicecompanion.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.5.0",
    "mcp>=1.0.0",
    "requests>=2.31.0",
    "markdownify>=0.11.0",
    "beautifulsoup4>=4.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-web-tools = "main:mcp"