[project]
name = "ultimate-mcp-server"
version = "1.0.0"
description = "All-in-one MCP server with database, Windows automation, file system, git, and web capabilities"
authors = [
    { name = "Justice Companion", email = "dev@justicecompanion.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core MCP dependencies
    "fastmcp>=0.5.0",
    "mcp>=1.0.0",
    "platformdirs>=4.0.0",
    "starlette>=0.37.0",
    "click>=8.0.0",
    "python-benedict>=0.33.0",

    # File system and utilities
    "pathlib-mate>=1.0.0",
    "watchdog>=3.0.0",

    # Web capabilities
    "requests>=2.31.0",
    "markdownify>=0.11.0",
    "beautifulsoup4>=4.12.0",
    "httpx>=0.25.0",

    # Windows automation (optional)
    "pyautogui>=0.9.54",
    "pyperclip>=1.8.2",
    "humancursor>=0.2.0",
    "uiautomation>=2.0.15",

    # Database support
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",  # PostgreSQL
    "pymysql>=1.1.0",          # MySQL
    "pymongo>=4.5.0",          # MongoDB
    "redis>=5.0.0",            # Redis

    # Development tools
    "gitpython>=3.1.40",
    "pygithub>=1.59.0",
    "python-dotenv>=1.0.0",

    # Data processing
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",        # Excel support
    "python-csv>=0.0.13",     # Enhanced CSV
    "jsonschema>=4.19.0",     # JSON validation

    # API and web frameworks
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",

    # Security
    "cryptography>=41.0.0",
    "keyring>=24.0.0",

    # Monitoring and logging
    "structlog>=23.2.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.9.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
]

windows = [
    "pywin32>=306",
    "wmi>=1.5.1",
    "psutil>=5.9.0",
]

database-all = [
    "asyncpg>=0.29.0",         # Async PostgreSQL
    "aiomysql>=0.2.0",         # Async MySQL
    "aiosqlite>=0.19.0",       # Async SQLite
    "motor>=3.3.0",            # Async MongoDB
    "aioredis>=2.0.0",         # Async Redis
    "snowflake-connector-python>=3.5.0",
    "google-cloud-bigquery>=3.13.0",
    "cx-Oracle>=8.3.0",       # Oracle
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
ultimate-mcp = "ultimate_mcp_server.main:main"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
target-version = "py310"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"